@@ -6,6 +6,8 @@ NEWS
         Added missing translation for hu-HU
 	Fixed major issue in passwords handling (#2739). SOGo Connector
         now depends on Lightning (as it reuses it password handling code)
+	Fixed URL comparisons to avoid sync issues when the SOGo configuration
+	is broken regarding the UIDFielName vs. login used (foo vs foo@example.com)
 
 24.0.4	Improved etag handling (#1411 and #1624)
 	Handle periodic syncing of address books
